solve the all calculation and adding the code for each rule expect grands and some specific rules

--- a/mawaris-master/src/app/app.html
+++ b/mawaris-master/src/app/app.html
@@ -1,12 +1,12 @@
 <div class="h-screen flex flex-col">
-  <app-navbar class="h-16"></app-navbar>
+  <app-navbar class="h-16 fixed w-full top-0 z-50"></app-navbar>
   
-  <main class="flex-1">
+  <main class="flex-1 mt-16">
     <router-outlet></router-outlet>
   </main>
   
   
-  <app-footer class="h-12"></app-footer>
+  <app-footer class="h-12 mt-12"></app-footer>
 </div>
 
    
